[package]
name = "nl80211"
version = "0.0.1"
authors = ["eonm <eon.mathis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buffering = { version = "0.3.2",  features = ["copy"] }
neli = "0.4.3-r1"
hex = "*"
