[package]
name = "nl80211"
version = "0.0.1"
authors = ["eonm <eon.mathis@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Send commands to nl80211 and receive messages"
homepage = "https://github.com/Eonm/nl80211"
repository = "https://github.com/Eonm/nl80211"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buffering = { version = "0.3.2",  features = ["copy"] }
neli = "0.4.3-r1"
hex = "0.4.0"
